changed pfp file name

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <section class="full-height" id="intro">
-        <img class="profile-pic" src="/personal photo.jpg" alt="">
+        <img class="profile-pic" src="/personal-photo.jpg" alt="">
 
         <div>
             <h1>Youssof Mohamed</h1>
