--- a/index.html
+++ b/index.html
@@ -570,9 +570,47 @@
                 <div class="skew-container">
                     <h2 class="accomplishment-title">FreeCodeCamp</h2>
                     <div class="slideshow-container">
-                        <div class="mySlides">
-                            <img class="accomplishment-img" src="Storiko1.png">
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="freecodecamp.png">
                         </div>
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="codepen1.png">
+                        </div>
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="codepen2.png">
+                        </div>
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="codepen3.png">
+                        </div>
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="codepen4.png">
+                        </div>
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="codepen5.png">
+                        </div>
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="codepen6.png">
+                        </div>
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="codepen7.png">
+                        </div>
+                        <div class="mySlides10">
+                            <img class="accomplishment-img" src="codepen8.png">
+                        </div>
+                        <a class="prev" onclick="plusSlides(-1, 'mySlides10', 'dot10')">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1, 'mySlides10', 'dot10')">&#10095;</a>
+                    </div>
+                
+                    <div style="text-align:center">
+                        <span class="dot10" onclick="currentSlide(1, 'mySlides10', 'dot10')"></span>
+                        <span class="dot10" onclick="currentSlide(2, 'mySlides10', 'dot10')"></span>
+                        <span class="dot10" onclick="currentSlide(3, 'mySlides10', 'dot10')"></span>
+                        <span class="dot10" onclick="currentSlide(4, 'mySlides10', 'dot10')"></span>
+                        <span class="dot10" onclick="currentSlide(5, 'mySlides10', 'dot10')"></span>
+                        <span class="dot10" onclick="currentSlide(6, 'mySlides10', 'dot10')"></span>
+                        <span class="dot10" onclick="currentSlide(7, 'mySlides10', 'dot10')"></span>
+                        <span class="dot10" onclick="currentSlide(8, 'mySlides10', 'dot10')"></span>
+                        <span class="dot10" onclick="currentSlide(9, 'mySlides10', 'dot10')"></span>
                     </div>
                     
                 </div>
@@ -581,7 +619,7 @@
                 <div class="skew-container">
                     <h2 class="accomplishment-title">RoboGames</h2>
                     <div class="slideshow-container">
-                        <div class="mySlides">
+                        <div class="mySlides11">
                             <img class="accomplishment-img" src="Storiko1.png">
                         </div>
                     </div>
@@ -625,7 +663,7 @@
                 <div class="skew-container">
                     <h2 class="activity-title">Soccer</h2>
                     <div class="slideshow-container">
-                        <div class="mySlides">
+                        <div class="mySlides12">
                             <img class="activity-img" src="Storiko1.png">
                         </div>
                     </div>
