--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 
     <section class="full-height bg-img" id="about">
         <!-- <img class="bg-img" src="background.jpg" alt=""> -->
-        <div class="title">
+        <div class="title fade-in">
             <h3>ABOUT</h3>
         </div>
 
-        <div class="vertical-container">
+        <div class="vertical-container fade-in">
             <p class="about-content">
                 I am a Software Engineering student at Mcgill University. I stepped into the coding world more than 5 years ago. I learnt different programming languages along the way and tried various fields, but currently I am focussing on improving my web development skills and I am trying to grind up in the competitive programming field. I also have other interests beside coding, I love drawing, chess, and I am a professional Taekwondo player. I took part into a lot of Taekwondo Championships, and I've won a lot of medals. I consider myself as a very deterministic person, and I am always eager to learn new things.
             </p>
@@ -71,13 +71,12 @@
     </section>
 
     <section class="full-height" id="skills">
-        <div class="title">
+        <div class="title fade-in">
             <h3>SKILLS</h3>
         </div>
-        
         <div class="vertical-container">
-            <h5>Web Development</h5>
-            <div class="skill-cat">
+            <h5 class="fade-in">Web Development</h5>
+            <div class="skill-cat fade-in">
                 <div class="skill-item">
                     <h6>HTML</h6>
                     <div class="skill-description horizontal-flex-container">
@@ -140,8 +139,8 @@
                 </div>
             </div>
             <div class="border-div"></div>
-            <h5>Game Development</h5>
-            <div class="skill-cat">
+            <h5 class="fade-in">Game Development</h5>
+            <div class="skill-cat fade-in">
                 <div class="skill-item">
                     <h6>Unity</h6>
                     <div class="skill-description horizontal-flex-container">
@@ -164,8 +163,8 @@
                 </div>
             </div>
             <div class="border-div"></div>
-            <h5>Programming Languages</h5>
-            <div class="skill-cat">
+            <h5 class="fade-in">Programming Languages</h5>
+            <div class="skill-cat fade-in">
                 <div class="skill-item">
                     <h6>C</h6>
                     <div class="skill-description horizontal-flex-container">
@@ -238,8 +237,8 @@
                 </div>
             </div>
             <div class="border-div"></div>
-            <h5>Java</h5>
-            <div class="skill-cat">
+            <h5> class="fade-in"Java</h5>
+            <div class="skill-cat fade-in">
                 <div class="skill-item">
                     <h6>JavaFX</h6>
                     <div class="skill-description horizontal-flex-container">
@@ -292,8 +291,8 @@
                 </div>
             </div>
             <div class="border-div"></div>
-            <h5>Version Control</h5>
-            <div class="skill-cat">
+            <h5 class="fade-in">Version Control</h5>
+            <div class="skill-cat fade-in">
                 <div class="skill-item">
                     <h6>Git</h6>
                     <div class="skill-description horizontal-flex-container">
@@ -316,8 +315,8 @@
                 </div>
             </div>
             <div class="border-div"></div>
-            <h5>IDEs</h5>
-            <div class="skill-cat">
+            <h5 class="fade-in">IDEs</h5>
+            <div class="skill-cat fade-in">
                 <div class="skill-item">
                     <h6>Visual Studio</h6>
                     <div class="skill-description horizontal-flex-container">
@@ -372,10 +371,10 @@
     </section>
 
     <section class="full-height bg-img" id="work">
-        <div class="title">
+        <div class="title fade-in">
             <h3>WORK EXPERIENCE</h3>
         </div>
-        <div class="scroll">
+        <div class="scroll fade-in">
             <div class="work vertical-container">
                 <div class="skew-container">
                     <h2 class="work-title">Unity3D Game Developer</h2>
@@ -410,10 +409,10 @@
     </section>
 
     <section class="full-height" id="projects">
-        <div class="title">
+        <div class="title fade-in">
             <h3>PROJECTS</h3>
         </div>
-        <div class="scroll">
+        <div class="scroll fade-in">
             <div class="project vertical-container">
                 <div class="skew-container">
                     <h2 class="project-title">STORIKO</h2>
@@ -592,11 +591,11 @@
         
     </section>
 
-    <section class="full-height bg-img" id="accomplishments">
-        <div class="title">
+    <section class="full-height" id="accomplishments">
+        <div class="title fade-in">
             <h3>ACCOMPLISHMENTS</h3>
         </div>
-        <div class="scroll">
+        <div class="scroll fade-in">
             <div class="accomplishment vertical-container">
                 <div class="skew-container">
                     <h2 class="accomplishment-title">FreeCodeCamp</h2>
@@ -706,10 +705,10 @@
     </section>
 
     <section class="full-height" id="activities">
-        <div class="title">
+        <div class="title fade-in">
             <h3>ACTIVITIES</h3>
         </div>
-        <div class="scroll">
+        <div class="scroll fade-in">
             <div class="activity vertical-container">
                 <div class="skew-container">
                     <h2 class="activity-title">Taekwondo</h2>
@@ -856,11 +855,11 @@
     </section>
 
     <section class="full-height bg-img" id="contact">
-        <div class="title">
+        <div class="title fade-in">
             <h3>Contact</h3>
         </div>
 
-        <div class="content">
+        <div class="content fade-in">
             <div class="social">
                 <div>
                     <a href="https://www.linkedin.com/in/youssof-mohamed-432245219/" class="fa fa-linkedin fa-2xl"></a>
