added download CV button

--- a/index.html
+++ b/index.html
@@ -859,8 +859,8 @@
             <h3>Contact</h3>
         </div>
 
-        <div class="content fade-in">
-            <div class="social">
+        <div class="content">
+            <div class="social fade-in">
                 <div>
                     <a href="https://www.linkedin.com/in/youssof-mohamed-432245219/" class="fa fa-linkedin fa-2xl"></a>
                 </div>
@@ -874,14 +874,19 @@
                     <a href="https://www.instagram.com/youssof_masoud/" class="fa fa-instagram"></a>
                 </div>
             </div>
-            <div class="social">
+            <div class="social fade-in">
                 <div>
                     <a href="mailto:youssof.mohamed@mail.mcgill.ca" class="fa fa-envelope"></a>
                 </div>
             </div>
+            <div class="social fade-in">
+                <a class="button" href="/files/Youssof Mohamed - 'Resume'.pdf" download>Download CV</a>
+            </div>
         </div>
+
+
     </section>
-    
+
     <script src="app.js"></script>
 </body>
 </html>
