--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="vertical-container">
             <h5 class="fade-in">Web Development</h5>
             <div class="skill-cat fade-in">
-                <div class="skill-item">
+                <div class="skill-item myBtn">
                     <h6>HTML</h6>
                     <div class="skill-description horizontal-flex-container">
                         <span class="star checked">&starf;</span>
@@ -369,6 +369,13 @@
             </div>
         </div>
     </section>
+
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>Some text in the Modal..</p>
+        </div>
+    </div>
 
     <section class="full-height bg-img" id="work">
         <div class="title fade-in">
