--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+JP:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gasoek+One&family=IBM+Plex+Sans+JP:wght@700&family=Tilt+Prism&display=swap" rel="stylesheet">
     <title>Youssof Mohamed</title>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
-        <a class="navbar-brand" href="#">Youssof</a>
+        <a class="navbar-brand" href="#">Youssof<span style="color: #fca311">Mohamed</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,9 +51,11 @@
         <img class="profile-pic" src="images/personal-photo.jpg" alt="">
 
         <div>
-            <h1>Youssof Mohamed</h1>
+            <h2 style="font-family: 'Tilt Prism', cursive; font-size: 4rem;">I'm</h2>
+
+            <h1 style="font-family: 'Gasoek One', sans-serif; font-size: 4rem;"><span style="color: #fca311">Y</span>oussof <span style="color: #fca311">M</span>ohamed</h1>
     
-            <h2>Software Engineering Student</h2>
+            <h2 class="typewriter">Software Engineering Student</h2>
         </div>
     </section>
 
@@ -77,7 +79,7 @@
         <div class="vertical-container">
             <h5 class="fade-in">Web Development</h5>
             <div class="skill-cat fade-in">
-                <div class="skill-item myBtn">
+                <div class="skill-item" id="myBtn">
                     <h6>HTML</h6>
                     <div class="skill-description horizontal-flex-container">
                         <span class="star checked">&starf;</span>
