responsive about section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="back">ABOUT</div>
         </div>
         <div class="d-flex align-items-center">
-            <div class="row">
+            <div class="row about-container">
                 <div class="col d-flex justify-content-end fade-in">
                     <div>
                         <div class="profile-pic shifted-border"></div>
