different titles typewriter

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h1 style="font-size: 4rem; font-weight: 100;">I Am <span style="font-weight: 300;">Youssof Mohamed</span></h1>
         
         <div class="wrapper">
-            <h3 class="typewriter" style="font-weight: 100;">Software Engineering Student</h2>
+            <h3 class="typewriter" style="font-weight: 100;"></h2>
         </div>
     </section>
 
