contact section done

--- a/index.html
+++ b/index.html
@@ -30,16 +30,10 @@
                 <a class="nav-link" href="#skills">SKILLS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#work">WORK EXPERIENCE</a>
+                <a class="nav-link" href="#portfolio">PORTFOLIO</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#projects">PROJECTS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#accomplishments">ACCOMPOLISHMENTS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#activities">ACTIVITIES</a>
+                <a class="nav-link" href="#contact">CONTACT</a>
             </li>
             </ul>
             
@@ -79,6 +73,71 @@
                 </div>
             </div>
         </div>
+
+    </section>
+
+    <section class="full-height container-fluid" id="portfolio">
+        <div class="title fade-in">
+            <div class="front">Portfolio</div>
+            <div class="back">PORTFOLIO</div>
+        </div>
+
+        <div class="d-flex justify-content-center p-0">
+            <a class="curved-btn" href="">All</a>
+            <a class="curved-btn" href="">Work Experience</a>
+            <a class="curved-btn" href="">Projects</a>
+            <a class="curved-btn" href="">Activities</a>
+        </div>
+
+    </section>
+
+    <section class="full-height container-fluid" id="contact">
+        <div class="title fade-in">
+            <div class="front">Contact Me</div>
+            <div class="back">CONTACT</div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <input class="contact-input" type="text" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="col">
+                            <input class="contact-input" type="text" class="form-control" placeholder="Email">
+                        </div>
+                    </div>
+                </div>
+                <div class="w-100"></div>
+                <div class="col">
+                    <input class="contact-input" type="text" class="form-control" placeholder="Subject">
+                </div>
+                <div class="w-100"></div>
+                <div class="col">
+                    <textarea id="msg-input" class="contact-input" type="text" class="form-control" placeholder="Message"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="fade-in d-flex justify-content-center align-items-center p-0 mt-4">
+                <div>
+                    <a href="https://www.linkedin.com/in/youssof-mohamed-432245219/" class="fa fa-linkedin fa-2xl"></a>
+                </div>
+                <div>
+                    <a href="https://www.facebook.com/abo.youssof.94" class="fa fa-facebook"></a>
+                </div>
+                <div>
+                    <a href="https://github.com/Mos2d" class="fa fa-github"></a>
+                </div>
+                <div>
+                    <a href="https://www.instagram.com/youssof_masoud/" class="fa fa-instagram"></a>
+                </div>
+            </div>
+            <div class="fade-in d-flex justify-content-center p-0 mt-5 download">
+                <a class="button" href="/files/Youssof Mohamed - 'Resume'.pdf" download>Download CV</a>
+            </div>
+        </div>
+
 
     </section>
 <!-- 
