--- a/index.html
+++ b/index.html
@@ -83,10 +83,22 @@
         </div>
 
         <div class="d-flex justify-content-center p-0">
-            <a class="curved-btn" href="">All</a>
-            <a class="curved-btn" href="">Work Experience</a>
-            <a class="curved-btn" href="">Projects</a>
-            <a class="curved-btn" href="">Activities</a>
+            <a type="button" class="curved-btn">All</a>
+            <a type="button" class="curved-btn">Work Experience</a>
+            <a type="button" class="curved-btn">Projects</a>
+            <a type="button" class="curved-btn">Activities</a>
+        </div>
+
+        <div class="grid-container">
+            <img class="rounded" src="images/atari-1.png" alt="">
+            <img class="rounded" src="images/Beta1.png" alt="">
+            <img class="rounded" src="images/Storiko1.png" alt="">
+            <img class="rounded" src="images/climbsafe1.png" alt="">
+            <img class="rounded" src="images/codepen1.png" alt="">
+            <img class="rounded" src="images/codepen2.png" alt="">
+            <img class="rounded" src="images/codepen3.png" alt="">
+            <img class="rounded" src="images/codepen4.png" alt="">
+            <img class="rounded" src="images/crazy-baby-1.png" alt="">
         </div>
 
     </section>
