removed sending email

--- a/index.html
+++ b/index.html
@@ -219,8 +219,6 @@
             <div class="front">Contact Me</div>
             <div class="back">CONTACT</div>
         </div> 
-        <div class="container-fluid">
-            <div class="row">
                 <!-- <div class="col-3">
                     <div class="d-flex flex-column justify-content-center align-items-start">
                         <div class="d-flex align-items-center justify-content-between">
@@ -233,6 +231,8 @@
                         </div>
                     </div>
                 </div> -->
+            <!-- <div class="container-fluid">
+                <div class="row">
                 <div class="email-form container-fluid col">
                     <div class="row">
                         <div class="container-fluid">
@@ -259,7 +259,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+            </div> -->
         <!-- <div class="d-flex justify-content-center p-0">
             <div class="d-flex flex-column align-items-center m-3">
                 <i class="fa fa-envelope"></i> 
@@ -284,10 +284,16 @@
                 <div>
                     <a href="https://www.instagram.com/youssof_masoud/" class="fa fa-instagram"></a>
                 </div>
+                <div>
+                    <a href="mailto:youssof.mohamed@mail.mcgill.ca" class="fa fa-envelope"></a>
+                </div>
+                <div>
+                    <a href="tel:+14389301444" class="fa fa-mobile"></a>
+                </div>
             </div>
-            <div class="fade-in d-flex justify-content-center p-0 mt-4 download">
-                <a class="button" href="/files/CV.pdf" download>Download CV</a>
-            </div>
+        </div>
+        <div class="fade-in d-flex justify-content-center p-0 mt-4 download">
+            <a class="button" href="/files/CV.pdf" download>Download CV</a>
         </div>
 
 
